build: remove purecss-webpack-plugin

--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
     "@babel/preset-typescript"
   ],
   "plugins": [
+    ["import", { "libraryName": "antd", "style": "css" }],
     [
       "@babel/plugin-transform-runtime",
       {
