--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/parser": "^4.14.0",
     "autoprefixer": "^10.2.3",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^7.0.3",
